repo-layout/css/link.css
.chevron {
	background-repeat: no-repeat;
	background-image: url(../../assets/chevron@2x.png);
	background-position-x: 100%;
	background-size: 10px 13px;
}

li.link-inner {
	display: inline-block;
}

.link-inner > div {
	display: inline-block;
	width: 100%;
}

.link-inner > div > label {
	color: #000;
	font-family: Arial, -apple-system-font;
}

img.icon {
	height: auto;
	/* XXX: small differences due to font bugs */
	margin: -7px 6px -9px 5px; /*June*/
	max-height: 30px;
	min-width: 30px;
	width: 30px;
}

p {
	font-weight: 300;
}

.link {
	text-align: left;
}

.repo-link {
	margin-top: -1px;
}

.icon-top {
	border-radius: 5px;
}

.changelog-list {
	font-family: Arial, -apple-system-font;
}

.bugs-list {
	font-family: Arial, -apple-system-font;
}

.version-number {
	font-weight: bold;
}

.version-number.listed {
	font-weight: normal;
	font-size: 20px;
}

.version-number.listed.latest-ver {
	font-weight: bold;
	font-size: 25px;
}

.right {
	float: right;
	font-family: Arial, -apple-system-font;
}

